syntax = "proto3";
// option go_package = "proto;courierapi";
option go_package = "github.com/ShipSwift/courierapi;courierapi";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
package courierapi;

service Courierapi {
    rpc CreateLabel(CreateLabelRequest) returns (CreateLabelReply) {}
    rpc GetShipment(GetShipmentRequest) returns (GetShipmentReply) {}
    rpc CancelShipment(CancelShipmentRequest) returns (CancelShipmentReply) {}
    rpc CreateCompany(CreateCompanyRequest) returns (CreateCompanyReply) {}
    rpc DeleteCompany(DeleteCompanyRequest) returns (DeleteCompanyReply) {}
    rpc CreateCarrier(CreateCarrierRequest) returns (CreateCarrierReply) {}
    rpc ChangeCarrierCutoffTime(ChangeCarrierCutoffTimeRequest) returns (ChangeCarrierCutoffTimeReply) {}
    rpc DeleteCarrier(DeleteCarrierRequest) returns (DeleteCarrierReply) {}
    rpc ToggleCarrier(ToggleCarrierRequest) returns (ToggleCarrierReply) {}
    rpc ListCarriers(ListCarriersRequest) returns (ListCarriersReply) {}
    rpc GetServices(GetServicesRequest) returns (GetServicesReply) {}
    rpc SetCarrierServices(SetCarrierServicesRequest) returns (SetCarrierServicesReply) {}
    rpc CreateManifest(CreateManifestRequest) returns (CreateManifestReply) {}
    rpc AddLabel(CreateShipmentReq) returns (CreateShipmentReply) {}
    rpc CreateBatchLabel(CreateBatchLabelRequest) returns (CreateBatchLabelReply) {}
    rpc ListBatches(ListBatchesReq) returns (ListBatchesReply) {}
    rpc ListBatchShipments(ListBatchShipmentsReq) returns (ListBatchShipmentsReply) {}
    rpc BatchCount(BatchCountReq) returns (BatchCountReply) {}
    rpc BatchShipmentsCount(BatchShipmentCountReq) returns (BatchShipmentCountReply) {}
}

service Internal {
    // empty
}

message BatchCountReq {
    string company_id = 1;
}

message BatchCountReply {
    int64 count = 1;
}

message BatchShipmentCountReq {
    string company_id = 1;
    string batch_id = 2;
}

message BatchShipmentCountReply {
    int64 count = 1;
}

message ListBatchesReq {
    string company_id = 1;
    string pagination_cursor = 2;
    uint32 page_size = 3;
}

message ListBatchesReply {
    repeated BatchInfo batches = 1;
    string next_page_cursor = 2;
    uint32 page_size = 3;
}

message ListBatchShipmentsReq {
    string company_id = 1;
    string batch_id = 2;
    string pagination_cursor = 3;
    uint32 page_size = 4;
}

message ListBatchShipmentsReply {
    repeated ShipmentBatchInfo shipments = 1;
    string next_page_cursor = 2;
    uint32 page_size = 3;
}

message ShipmentBatchInfo {
    google.protobuf.BoolValue success = 1;
    ShipmentLite shipment = 2;
}

message ShipmentLite {
    string order_number = 2;
    string label_url = 3;
}

message BatchInfo {
    string id = 1;
    string pdf_url = 2;
    int32 shipment_count = 3;
    google.protobuf.Timestamp created_at = 4;
    string status = 5;
}

message CreateBatchLabelRequest {
    string company_id = 1;
    repeated BatchLabelInfo batch_labels = 2;
}

message BatchLabelInfo {
    string store_id = 1;
    string order_number = 2;
    string courier = 3;
    string service = 4;
    Shipment shipment = 5;
}

message CreateBatchLabelReply {
    bool success = 1;
    string message = 2;
    string batch_id = 3;
}

message CreateLabelRequest {
    string company_id = 1;
    string store_id = 2;
    string order_number = 3;
    string courier = 4;
    string service = 5;
    Shipment shipment = 7;
}

message Shipment {
    google.protobuf.Timestamp collection_date = 1;
    string delivery_instructions = 2;
    ShipFrom ship_from = 3;
    ShipTo ship_to = 4;
    repeated Parcel parcels = 5;
    bool generate_invoice = 6;
    bool generate_packing_slip = 7;
    string dc_service_id = 8;
    map<string, string> courier_specifics = 9;
}

message Parcel {
    uint32 width = 1;
    uint32 height = 2;
    uint32 length = 3;
    string unit = 4;
    repeated Item items = 5;
    float weight = 6;
    string weight_unit = 7;
    float packaging_weight = 8;
}

message Item {
    string description = 1;
    string origin_country = 2;
    uint32 quantity = 3;
    float value = 4;
    string currency = 5;
    float weight = 6;
    string weight_unit = 7;
    string sku = 8;
    string hs_code = 9;
}

message ShipInfo {
    string name = 1;
    string phone = 2;
    string email = 3;
    string company_name = 4;
    string address_1 = 5;
    string address_2 = 6;
    string address_3 = 7;
    string city = 8;
    string postcode = 9;
    string county = 10;
    string country_iso = 11;
}

message ShipTo {
    ShipInfo ship_info = 1;
}

message ShipFrom {
    ShipInfo ship_info = 1;
    string tax_id = 2;
    string eori_id = 3;
    string company_number = 4;
    string ioss_number = 5;
}

message CreateLabelReply {
    string label_url = 1;
}

message GetShipmentRequest {
    string company_id = 1;
    string store_id = 2;
    string order_number = 3;
    bool latest_only = 4;
}

message ShipmentInfo {
    google.protobuf.Timestamp shipment_date = 1;
    string carrier = 2;
    string service = 3;
    string tracking_number = 4;
    string label_url = 5;
    string status = 6;
}

message GetShipmentReply {
    repeated ShipmentInfo shipments = 1;
}

message CancelShipmentRequest {
    string company_id = 1;
    string store_id = 2;
    string order_number = 3;
}

message CancelShipmentReply {
    // empty
}

message CreateCompanyRequest {
    string company_id = 1;
}

message CreateCompanyReply {
    // empty
}

message DeleteCompanyRequest {
    string company_id = 1;
}

message DeleteCompanyReply {
    // empty
}

message CreateCarrierRequest {
    string company_id = 1;
    string carrier_name = 2;
    string type = 3;
    string cutoff_time = 4;
    bool test = 5;
    map<string, string> auth = 6;
}

message CreateCarrierReply {
    // empty
}

message ChangeCarrierCutoffTimeRequest {
    string company_id = 1;
    string carrier_name = 2;
    string cutoff_time = 3;
}

message ChangeCarrierCutoffTimeReply {
    // empty
}

message DeleteCarrierRequest {
    string company_id = 1;
    string carrier_name = 2;
}

message DeleteCarrierReply {
    // empty
}

message ToggleCarrierRequest {
    string company_id = 1;
    string carrier_name = 2;
    bool enabled = 4;
}

message ToggleCarrierReply {
    // empty
}

message ListCarriersRequest {
    string company_id = 1;
}

message CarrierInfo {
    string name = 1;
    string type = 2;
    string enabled_services = 3;
    bool enabled = 4;
    string cutoff_time = 5;
}

message ListCarriersReply {
    repeated CarrierInfo carriers = 1;
}

message GetServicesRequest {
    string company_id = 1;
    string carrier_name = 2;
}

message GetServicesReply {
    repeated string enabled_services = 1;
}

message SetCarrierServicesRequest {
    string company_id = 1;
    string carrier_name = 2;
    repeated string enabled_services = 3;
}

message SetCarrierServicesReply {
    // empty
}

message CreateManifestRequest {
    string company_id = 1;
    string carrier_name = 2;
}

message CreateManifestReply {
    // empty
}

message CreateShipmentReq {
    string company_id = 1;
    string store_id = 2;
    string tracking = 3;
    string order_number = 4;
    string courier = 5;
}

message CreateShipmentReply {

}